--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/logging": "^9.2.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "stripe": "^8.145.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
